--- a/mongo-access/package.json
+++ b/mongo-access/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "watch": "nodemon -L ./src/index.js"
+    "watch": "nodemon -L -w ./src/index.js"
   },
   "author": "",
   "license": "ISC",
