--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -53,12 +53,16 @@ services:
   dashboard:
     build:
       context: ./dashboard
+      dockerfile: Dockerfile.development
     environment:
       CONTENT_SERVER_URI: https://content-server.${HOST}
       ASSET_SERVER_URI: https://asset-server.${HOST}
       GAME_SERVER_URI: https://game-server.${HOST}
       FONT_URI: https://static.${HOST}/fonts
       PORT: 443
+    volumes:
+      - ./dashboard:/app
+      - /app/node_modules
     depends_on:
       - content-server
       - asset-server
