--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "eppsa-ksm-shared": "file:./lib/eppsa-ksm-shared",
     "eslint": "^4.19.1",
     "eslint-config-artcom": "^0.7.0",
     "eslint-config-artcom-react": "^0.5.1",
@@ -31,14 +32,15 @@
     "http-server": "^0.11.1",
     "lodash.mapvalues": "^4.6.0",
     "lodash.omit": "^4.5.0",
-    "eppsa-ksm-shared": "file:./lib/eppsa-ksm-shared",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
+    "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "socket.io-client": "^2.1.0",
     "styled-components": "^3.2.6",
+    "styled-transition-group": "^1.0.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   },
