--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,8 @@ services:
       - type: volume
         source: mongoDB
         target: /data/db
+    ports:
+      - "27017:27017"
 
   mongo-access:
       build:
