--- a/game-client/package.json
+++ b/game-client/package.json
@@ -42,7 +42,7 @@
     "react": "^16.2.0",
     "react-autobind": "^1.0.6",
     "react-dom": "^16.2.0",
-    "react-qr-reader": "^2.1.0",
+    "react-qr-reader": "file:./lib/react-qr-reader",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
