--- a/nginx/sites-available/development/dashboard.eppsa.de.conf
+++ b/nginx/sites-available/development/dashboard.eppsa.de.conf
@@ -1,28 +1,12 @@
 server {
   include /etc/nginx/config/ssl.conf;
-  include /etc/nginx/config/proxy.conf;
 
   server_name ~^dashboard\.(.+\.|)eppsa.de$;
 
+  root /dashboard;
+
   location / {
-    proxy_pass http://docker-dashboard/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
-
-  # Support for webpack-dev-server
-  location /sockjs-node {
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-
-    proxy_pass http://docker-dashboard;
-  }
-
-  location /socket.io/ {
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-
-      proxy_pass http://docker-dashboard;
-    }
-
 }
