--- a/nginx/sites-available/development/sorting.eppsa.de.conf
+++ b/nginx/sites-available/development/sorting.eppsa.de.conf
@@ -1,19 +1,12 @@
 server {
   include /etc/nginx/config/ssl.conf;
-  include /etc/nginx/config/proxy.conf;
 
   server_name "~^sorting\.(.+\.|)eppsa.de$";
 
+  root /sorting;
+
   location / {
-    proxy_pass http://docker-game-challenge-sorting/;
-  }
-
-  # Support for webpack-dev-server
-  location /sockjs-node {
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-
-    proxy_pass http://docker-game-challenge-sorting;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
 }
