--- a/nginx/sites-available/development/stats.eppsa.de.conf
+++ b/nginx/sites-available/development/stats.eppsa.de.conf
@@ -1,20 +1,12 @@
 server {
   include /etc/nginx/config/ssl.conf;
-  include /etc/nginx/config/proxy.conf;
 
   server_name "~^stats\.(.+\.|)eppsa.de$";
 
+  root /stats;
+
   location / {
-    proxy_pass http://docker-game-stats/;
+    index index.html;
+    add_header Access-Control-Allow-Origin *;
   }
-
-  # Support for webpack-dev-server
-  location /sockjs-node {
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-
-    proxy_pass http://docker-game-stats;
-  }
-
 }
