--- a/game-client/package.json
+++ b/game-client/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.isempty": "^4.4.0",
     "lodash.mapvalues": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "lodash.pickby": "^4.6.0",
