--- a/game-client/package.json
+++ b/game-client/package.json
@@ -35,6 +35,7 @@
     "lodash.isempty": "^4.4.0",
     "lodash.mapvalues": "^4.6.0",
     "lodash.omit": "^4.5.0",
+    "lodash.omitby": "^4.6.0",
     "lodash.pickby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "querystring": "^0.2.0",
