--- a/eppsa-de-wifi-instructions/package.json
+++ b/eppsa-de-wifi-instructions/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint src",
     "watch": "webpack-dev-server --mode development --port 3000",
-    "start": "http-server ./dist -p 3000 -c 0",
+    "start": "http-server ./dist -p 3000 -c 0 -S -C $CERT -K $KEY",
     "build": "webpack --mode production"
   },
   "dependencies": {
